--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.7.6",
+    "@react-navigation/stack": "^5.9.3",
     "expo": "~39.0.2",
     "expo-linear-gradient": "^8.3.1",
     "expo-status-bar": "~1.0.2",
@@ -18,6 +19,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-cards-slider": "^0.1.2",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-navigation": "^7.1.0",
     "react-native-reanimated": "~1.13.0",
