--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "expo": "~39.0.2",
+    "expo-font": "~8.3.0",
     "expo-linear-gradient": "^8.3.1",
     "expo-status-bar": "~1.0.2",
     "native-base": "^2.13.14",
@@ -22,6 +24,7 @@
     "react-native-cards-slider": "^0.1.2",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-navigation": "^7.1.0",
+    "react-native-paper": "^4.2.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
